@@ -1,5 +1,7 @@
 *CVS*
 
+* Added reverse order of deleting fixtures, so referential keys can be maintained #247 [Tim Bates]
+
 * Added relative path search for sqlite dbfiles in database.yml (if RAILS_ROOT is defined) #233 [bitsweat]
 
 * Added option to establish_connection where you'll be able to leave out the parameter to have it use the RAILS_ENV environment variable
